// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress bar tests Partial progress 1`] = `
<div
  class="total-progress"
>
  <div
    class="completed-progress"
    style="width: 51%;"
  />
   
  <div
    class="progress-text"
  >
    51%
  </div>
</div>
`;

exports[`Progress bar tests Progress > 100% custom slot 1`] = `
<div
  class="total-progress"
>
  <div
    class="completed-progress fully-round"
    style="width: 100%;"
  />
   
  <div
    class="progress-text"
  >
    Finishing request
  </div>
</div>
`;

exports[`Progress bar tests Progress > 100% default slot 1`] = `
<div
  class="total-progress"
>
  <div
    class="completed-progress fully-round"
    style="width: 100%;"
  />
   
  <div
    class="progress-text"
  >
    
        Please wait...
      
  </div>
</div>
`;

exports[`Progress bar tests Progress 0 1`] = `
<div
  class="total-progress"
>
  <div
    class="completed-progress"
    style="width: 0%;"
  />
   
  <div
    class="progress-text"
  >
    0%
  </div>
</div>
`;

exports[`Progress bar tests Progress 100% custom slot 1`] = `
<div
  class="total-progress"
>
  <div
    class="completed-progress fully-round"
    style="width: 100%;"
  />
   
  <div
    class="progress-text"
  >
    Finishing request
  </div>
</div>
`;

exports[`Progress bar tests Progress 100% default slot 1`] = `
<div
  class="total-progress"
>
  <div
    class="completed-progress fully-round"
    style="width: 100%;"
  />
   
  <div
    class="progress-text"
  >
    
        Please wait...
      
  </div>
</div>
`;
